@@ -2,12 +2,13 @@
 	You can now tap the hold box to hold your current Tetrimino.
 		You are able to turn this feature off in the settings.
 	Jetris now follows the Super Rotation System exactly!
+	Jetris now has the 3-corner T t-spin system.
+		You can choose between this system and the original (immobile) system in the settings.
 	Improved performance for displaying the grid.
 	Highscores now updates during the game.
 		While displayed it doesn't fully save until the game is reset or paused.
 	Restructured the game sequence to better display a loss.
 	Improved performance when a Tetrimino is on delay.
-	"T-spin" have been renamed to "Twist" to account for spins that are not with the T-Tetrimino.
 	Default "Default Gravity" has been adjusted to 0.033. 
 		You may want to change this setting manually (or press reset all settings).
 	Fixed bug: Some settings are able to be changed such that it exceeds the cap.
